fix: update domainName in IntouchPayment component and HTML script

--- a/intouch.html
+++ b/intouch.html
@@ -10,8 +10,8 @@
 			function calltouchpay(){
 				sendPaymentInfos(new Date().getTime(),
 								 '***REMOVED***','***REMOVED***',
-                                 'everestfin.com',  '',
-                                 '', 20,
+                                 'samanaffa.com',  '',
+                                 '', 25,
                                  'Dakar', '','', '',  '');
 			}
 		</script> 
