fix(payments): Update payment integration and logging for IntouchPayment component
- Changed the domain in the payment function to use the development environment.
- Enhanced Content Security Policy to include additional domains for script and connection sources.
- Improved logging for payment handling, configuration checks, and error handling in the IntouchPayment component.
- Updated the loading sequence for CryptoJS and Intouch scripts to ensure proper functionality.

--- a/project_docs/EVEREST FINANCE.html
+++ b/project_docs/EVEREST FINANCE.html
@@ -10,7 +10,7 @@
 			function calltouchpay(){
 				sendPaymentInfos(new Date().getTime(),
 								 'EVE26795','rSC3InWWxL2zG9uMquzlDd1Bu1pOgPykJA9DrvGF9EdRis734m',
-                                 'samanaffa.com',  '',
+                                 'dev.samanaffa.com',  '',
                                  '', 20,
                                  'Dakar', '','', '',  '');
 			}
